@@ -19,8 +19,8 @@ module MergeRequests
     end
 
     # Triggers the automatic merge of merge_request once the build succeeds
-    def trigger(build)
-      merge_requests = merge_request_from(build)
+    def trigger(commit_status)
+      merge_requests = merge_request_from(commit_status)
 
       merge_requests.each do |merge_request|
         next unless merge_request.merge_when_build_succeeds?
@@ -45,9 +45,14 @@ module MergeRequests
 
     private
 
-    def merge_request_from(build)
-      merge_requests = @project.origin_merge_requests.opened.where(source_branch: build.ref).to_a
-      merge_requests += @project.fork_merge_requests.opened.where(source_branch: build.ref).to_a
+    def merge_request_from(commit_status)
+      branches = commit_status.ref
+
+      # This is for ref-less builds
+      branches ||= @project.repository.branch_names_contains(commit_status.sha)
+
+      merge_requests = @project.origin_merge_requests.opened.where(source_branch: branches).to_a
+      merge_requests += @project.fork_merge_requests.opened.where(source_branch: branches).to_a
 
       merge_requests.uniq.select(&:source_project)
     end
